--- a/dockerhub/Dockerfile
+++ b/dockerhub/Dockerfile
@@ -2,7 +2,8 @@ FROM mozilla/sops:v3.6.0-alpine as sops
 
 FROM alpine:3.13
 
-ARG AWSCLI_VERSION="1.23.13"
+#ARG AWSCLI_VERSION="1.23.13"
+ARG AWSCLI_VERSION="2.8.3"
 ARG HELM_VERSION="3.8.0"
 ARG KUBECTL_VERSION="1.24.0"
 
